--- a/client/src/components/login/login.css
+++ b/client/src/components/login/login.css
@@ -1,3 +1,10 @@
 .login-container{
     position: relative;
+    border: 1px solid green;
+    border-radius: 4px;
+    background-color: #f2f2f2;
+    width: 30vw;
+    height: 60vh;
+    margin-top: 20vh;
+    margin-left: 35vw;
 }
